# privacy-cash

./: .gitignore  LICENSE.md  README.md
anchor/: Anchor.toml  package-lock.json  package.json
anchor/programs/zkcash/: Cargo.toml
anchor/programs/zkcash/src/: lib.rs  utils.rs
anchor/programs/zkcash/tests/unit/: merkle_tree_test.rs  utils_test.rs
anchor/sol/tests/: zkcash.ts
anchor/tests/: sol_tests.ts  spl_mint_test.ts  spl_tests.ts
anchor/tests/lib/: test_alt.ts  utils.ts  utxo.ts
scripts/: create_alt_devnet.ts  create_alt_mainnet.ts  extend_alt_mainnet.ts  initialize_devnet.ts  initialize_spl_tree_devnet.ts  initialize_spl_tree_mainnet_squads.ts  package-lock.json  package.json  update_spl_deposit_limit_via_squad.ts
