[package]
name = "zkcash"
version = "0.1.0"
description = "Anchor program for zkcash"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zkcash"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []

# Network-specific features for authorization
localnet = []     # For local development and testing (no auth required)
localnet-mint-checked = []  # For testing with mint authority checks
devnet = []       # For devnet deployment

[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
anchor-spl = "0.31.0"
bytemuck = { version = "1.20.0", features = ["derive", "min_const_generics"] }
light-poseidon = "0.4.0"
light-hasher = "4.0.0"
num-bigint = "0.4.4"
ark-bn254 = { version = "0.5.0", features = [] }
ark-ff = { version = "0.5.0", features = [] }
ark-serialize = { version = "0.5.0", features = [] }
thiserror = "1.0.69"
solana-bn254 = "2.2.2"

[dev-dependencies]
lazy_static = "1.4.0"
rand = "0.9.0"
